// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`arrow function declaration scenarios handle useCallback hooks add t as dependencies exported function case 0 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
function _slicedToArray(r, e) { return _arrayWithHoles(r) || _iterableToArrayLimit(r, e) || _unsupportedIterableToArray(r, e) || _nonIterableRest(); }
function _nonIterableRest() { throw new TypeError(\\"Invalid attempt to destructure non-iterable instance.\\\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method.\\"); }
function _unsupportedIterableToArray(r, a) { if (r) { if (\\"string\\" == typeof r) return _arrayLikeToArray(r, a); var t = {}.toString.call(r).slice(8, -1); return \\"Object\\" === t && r.constructor && (t = r.constructor.name), \\"Map\\" === t || \\"Set\\" === t ? Array.from(r) : \\"Arguments\\" === t || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(t) ? _arrayLikeToArray(r, a) : void 0; } }
function _arrayLikeToArray(r, a) { (null == a || a > r.length) && (a = r.length); for (var e = 0, n = Array(a); e < a; e++) n[e] = r[e]; return n; }
function _iterableToArrayLimit(r, l) { var t = null == r ? null : \\"undefined\\" != typeof Symbol && r[Symbol.iterator] || r[\\"@@iterator\\"]; if (null != t) { var e, n, i, u, a = [], f = !0, o = !1; try { if (i = (t = t.call(r)).next, 0 === l) { if (Object(t) !== t) return; f = !1; } else for (; !(f = (e = i.call(t)).done) && (a.push(e.value), a.length !== l); f = !0); } catch (r) { o = !0, n = r; } finally { try { if (!f && null != t[\\"return\\"] && (u = t[\\"return\\"](), Object(u) !== u)) return; } finally { if (o) throw n; } } return a; } }
function _arrayWithHoles(r) { if (Array.isArray(r)) return r; }
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var _useState = useState('1'),
    _useState2 = _slicedToArray(_useState, 2),
    v = _useState2[0],
    setV = _useState2[1];
  var cb1 = useCallback(function () {
    var text = t(\\"key_useCallback作用域中的文案0\\");
    console.log(v);
  }, [v, t]);
  return <div name={t(\\"key_属性\\")} onClick={cb1} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\",\\\\\\"key_\\\\u7AD9\\\\u4F4D\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios handle useCallback hooks add t as dependencies exported function case 1 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var cb1 = useCallback(function () {
    var text = t(\\"key_useCallback作用域中的文案1\\");
  }, [t]);
  return <div name={t(\\"key_属性\\")} onClick={cb1} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\",\\\\\\"key_\\\\u7AD9\\\\u4F4D\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios handle useEffect hooks add t as dependencies exported function case 0 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
function _slicedToArray(r, e) { return _arrayWithHoles(r) || _iterableToArrayLimit(r, e) || _unsupportedIterableToArray(r, e) || _nonIterableRest(); }
function _nonIterableRest() { throw new TypeError(\\"Invalid attempt to destructure non-iterable instance.\\\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method.\\"); }
function _unsupportedIterableToArray(r, a) { if (r) { if (\\"string\\" == typeof r) return _arrayLikeToArray(r, a); var t = {}.toString.call(r).slice(8, -1); return \\"Object\\" === t && r.constructor && (t = r.constructor.name), \\"Map\\" === t || \\"Set\\" === t ? Array.from(r) : \\"Arguments\\" === t || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(t) ? _arrayLikeToArray(r, a) : void 0; } }
function _arrayLikeToArray(r, a) { (null == a || a > r.length) && (a = r.length); for (var e = 0, n = Array(a); e < a; e++) n[e] = r[e]; return n; }
function _iterableToArrayLimit(r, l) { var t = null == r ? null : \\"undefined\\" != typeof Symbol && r[Symbol.iterator] || r[\\"@@iterator\\"]; if (null != t) { var e, n, i, u, a = [], f = !0, o = !1; try { if (i = (t = t.call(r)).next, 0 === l) { if (Object(t) !== t) return; f = !1; } else for (; !(f = (e = i.call(t)).done) && (a.push(e.value), a.length !== l); f = !0); } catch (r) { o = !0, n = r; } finally { try { if (!f && null != t[\\"return\\"] && (u = t[\\"return\\"](), Object(u) !== u)) return; } finally { if (o) throw n; } } return a; } }
function _arrayWithHoles(r) { if (Array.isArray(r)) return r; }
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var _useState = useState('1'),
    _useState2 = _slicedToArray(_useState, 2),
    v = _useState2[0],
    setV = _useState2[1];
  useEffect(function () {
    var text = t(\\"key_effect作用域中的文案1\\");
    console.log(v);
  }, [v, t]);
  return <div name={t(\\"key_属性\\")} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\",\\\\\\"key_\\\\u7AD9\\\\u4F4D\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios handle useEffect hooks add t as dependencies exported function case 1 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  useEffect(function () {
    var text = t(\\"key_effect作用域中的文案1\\");
  }, [t]);
  return <div name={t(\\"key_属性\\")} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\",\\\\\\"key_\\\\u7AD9\\\\u4F4D\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios handle useEffect hooks add t as dependencies exported function case 2 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  useEffect(function () {
    var text = t(\\"key_effect作用域中的文案2\\");
  });
  return <div name={t(\\"key_属性\\")} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\",\\\\\\"key_\\\\u7AD9\\\\u4F4D\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios handle useMemo hooks add t as dependencies exported function case 0 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var cb1 = useMemo(function () {
    var text = t(\\"key_useMemo作用域中的文案1\\");
    return function () {
      console.log(text);
    };
  }, [t]);
  return <div name={t(\\"key_属性\\")} onClick={cb1} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\",\\\\\\"key_\\\\u7AD9\\\\u4F4D\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios handle useMemo hooks add t as dependencies exported function case 1 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var text = useMemo(function () {
    var text = t(\\"key_useMemo作用域中的文案1\\");
    return text;
  }, [t]);
  return <div name={t(\\"key_属性\\")} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\"]\\">{text}</div>;
};"
`;

exports[`arrow function declaration scenarios handle useMemo hooks add t as dependencies exported function case 2 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var var1 = t(\\"key_外部变量1\\");
  var var2 = useMemo(function () {
    var text = \\"text\\" + var1;
    return text;
  }, [var1]);
  return <div name={t(\\"key_属性\\")} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\"]\\">{var2}</div>;
};"
`;

exports[`arrow function declaration scenarios handle useMemo hooks add t as dependencies exported function case 3 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var data = useMemo(function () {
    return [{
      name: t(\\"key_值1\\"),
      label: t(\\"key_标签1\\")
    }, {
      name: t(\\"key_值2\\"),
      label: t(\\"key_标签2\\")
    }, {
      name: t(\\"key_值3\\"),
      label: t(\\"key_标签3\\")
    }];
  }, [t]);
  return <CustomComponent name={t(\\"key_属性\\")} data={data} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\"]\\"></CustomComponent>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle Assignment 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var var1 = t(\\"key_变量1\\");
  return <div name={t(\\"key_属性\\")} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\",\\\\\\"key_\\\\u7AD9\\\\u4F4D\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle JSXAttribute 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  return <div name={t(\\"key_属性\\")} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\",\\\\\\"key_jsx\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_jsx文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle arrayExpression 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var obj1 = [t(\\"key_属性值1\\"), t(\\"key_属性值2\\")];
  return <div name={t(\\"key_属性\\")} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\",\\\\\\"key_\\\\u7AD9\\\\u4F4D\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle binary expression rendering 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var showText = true;
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  return <div>
              {showText & t(\\"key_显示中文\\")}
            </div>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle composition condition case 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  console.log('干扰文案');
  useEffect(function () {
    var handler = function handler(e) {
      switch (key) {
        case 'n':
          emitter.emit('SHOW_MESSAGE', {
            level: 'info',
            msg: t(\\"key_操作异常\\")
          });
          break;
        case 'arrowleft':
          emitter.emit('SHOW_MESSAGE', {
            msg: t(\\"key_操作异常\\"),
            level: 'error'
          });
          break;
      }
    };
    window.addEventListener('keydown', handler);
    return function () {
      window.removeEventListener('keydown', handler);
    };
  }, [t]);
  return <>
        <div>1</div>
        </>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle conditional jsx attribute 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  console.log('输出值');
  var var1 = true;
  return <div name={var1 ? t(\\"key_条件1\\") : t(\\"key_条件2\\")} data-i18n=\\"[\\\\\\"key_jsx\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_jsx文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle conditional rendering 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var showText = true;
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  return <>
            <div>{showText && t(\\"key_显示中文\\")}</div>
            <span>{showText ? t(\\"key_条件1\\") : t(\\"key_条件2\\")}</span>
            </>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle console.log case1 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var clear = useCallback(function () {
    if (!rtcReady) return;
    console.log('执行BRTC停止逻辑');
    window.BRTC_StopPublish();
    window.BRTC_Stop();
    // client.current = null
    setRTCReady(false);
  }, [rtcReady]);
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle console.log case2 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.useShout = void 0;
var _reactI18next = require(\\"react-i18next\\");
var useShout = exports.useShout = function useShout(isSpeaking) {
  useEffect(function () {
    var handler = function handler(devices) {
      // 音视频设备变化
      console.log('当前电脑音视频输入设备: ', devices);
    };
    navigator.mediaDevices.addEventListener('devicechange', handler);
    return function () {
      navigator.mediaDevices.removeEventListener('devicechange', handler);
    };
  }, []);
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle jsx attribute 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  console.log('输出值');
  return <div name={t(\\"key_属性\\")} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\",\\\\\\"key_jsx\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_jsx文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle message object 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  useEffect(function () {
    message.info({
      content: t(\\"key_内容值\\")
    });
  }, [t]);
  return <div name={t(\\"key_属性\\")} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\",\\\\\\"key_\\\\u7AD9\\\\u4F4D\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle modal object 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var cb = useCallback(function () {
    modal.info({
      content: <div data-i18n=\\"[\\\\\\"key_\\\\u5185\\\\u5BB9\\\\u503C\\\\\\"]\\">{t(\\"key_内容值\\")}</div>,
      footer: <>
              <Space>
              <Button data-i18n=\\"[\\\\\\"key_\\\\u53D6\\\\u6D88\\\\\\"]\\">{t(\\"key_取消\\")}</Button>
              <Button data-i18n=\\"[\\\\\\"key_\\\\u786E\\\\u8BA4\\\\\\"]\\">{t(\\"key_确认\\")}</Button>
              </Space>
              </>
    });
  }, [t]);
  return <div name={t(\\"key_属性\\")} onClick={cb} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\",\\\\\\"key_\\\\u7AD9\\\\u4F4D\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle module scope objectProperty 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var obj1 = {
  name: \\"属性值1\\",
  key: \\"属性值2\\"
};
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  return <div name={t(\\"key_属性\\")} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\",\\\\\\"key_\\\\u7AD9\\\\u4F4D\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle nested JSXText 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  return <div data-i18n=\\"[\\\\\\"key_\\\\u5916\\\\u5C42\\\\u6587\\\\u672C\\\\\\"]\\">
              {t(\\"key_外层文本\\")}
              <div data-i18n=\\"[\\\\\\"key_\\\\u5D4C\\\\u5957\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_嵌套文本\\")}</div>
            </div>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle objectProperty 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  var obj1 = {
    name: t(\\"key_属性值1\\"),
    key: t(\\"key_属性值2\\")
  };
  return <div name={t(\\"key_属性\\")} data-i18n=\\"[\\\\\\"key_\\\\u5C5E\\\\u6027\\\\\\",\\\\\\"key_\\\\u7AD9\\\\u4F4D\\\\u6587\\\\u672C\\\\\\"]\\">{t(\\"key_站位文本\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle string literals combined with variables 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var text = \\"模块作用域文案\\";
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  return <div data-i18n=\\"[\\\\\\"key_\\\\u540E\\\\u7F00\\\\\\"]\\">{text}{t(\\"key_后缀\\")}</div>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle svg react component 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  return <svg t=\\"1711425339799\\" className=\\"icon\\" viewBox=\\"0 0 1024 1024\\" version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"200\\" height=\\"200\\">
        <path d=\\"M448 672c-6.4 0-19.2 0-25.6-6.4-12.8-12.8-12.8-32 0-44.8L531.2 512 422.4 409.6c-12.8-12.8-12.8-32 0-44.8s32-12.8 44.8 0l128 128c12.8 12.8 12.8 32 0 44.8l-128 128C467.2 672 454.4 672 448 672z\\" fill=\\"#272636\\" />
      </svg>;
};"
`;

exports[`arrow function declaration scenarios stringLiteral cases handle templateElement text 1`] = `
"\\"use strict\\";

Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
exports.Component = void 0;
var _reactI18next = require(\\"react-i18next\\");
var Component = exports.Component = function Component() {
  var _useTranslation = (0, _reactI18next.useTranslation)(),
    t = _useTranslation.t;
  return <div data-i18n=\\"[\\\\\\"key_\\\\u5916\\\\u5C42\\\\u6587\\\\u672C\\\\\\"]\\">
              {t('key_外层文本')}
              <div data-i18n=\\"[\\\\\\"key_\\\\u5D4C\\\\u5957\\\\u6587\\\\u672C\\\\\\"]\\">{t('key_嵌套文本')}</div>
            </div>;
};"
`;
